--- a/website1/src/App.css
+++ b/website1/src/App.css
@@ -23,6 +23,7 @@ summary:not(.custom-cursor-disable),
 [onclick]:not(.custom-cursor-disable),
 [contenteditable="true"]:not(.custom-cursor-disable),
 /* Icon selectors */
+
 i:not(.custom-cursor-disable),
 svg:not(.custom-cursor-disable),
 .png:not(.custom-cursor-disable),
@@ -36,6 +37,7 @@ path:not(.custom-cursor-disable),
 [class*="lucide-"]:not(.custom-cursor-disable) {
   cursor: pointer !important;
 }
+
 
 /* Show text cursor for text inputs and editable content */
 input[type="text"]:not(.custom-cursor-disable),
@@ -58,17 +60,65 @@ img[draggable="true"]:not(.custom-cursor-disable) {
 /* Optional: Add hover state cursors */
 button:hover:not(.custom-cursor-disable),
 /* :hover:not(.custom-cursor-disable), */
-a:hover:not(.custom-cursor-disable),
-[role="button"]:hover:not(.custom-cursor-disable),
-/* Icon hover states */
-i:hover:not(.custom-cursor-disable),
-svg:hover:not(.custom-cursor-disable),
-.icon:hover:not(.custom-cursor-disable),
-[class*="icon"]:hover:not(.custom-cursor-disable),
-[class^="fa-"]:hover:not(.custom-cursor-disable),
-[class*=" fa-"]:hover:not(.custom-cursor-disable),
-[class^="material-icons"]:hover:not(.custom-cursor-disable),
-[class*="material-symbols"]:hover:not(.custom-cursor-disable),
-[class*="lucide-"]:hover:not(.custom-cursor-disable) {
+a:hover:not(.custom-cursor-disable)
+{
   cursor: pointer !important;
+}
+[role="button"]:hover:not(.custom-cursor-disable){
+  cursor: none !important;
+}
+
+
+/* Specifically target MUI Accordion and all its children with high specificity */
+.MuiAccordion-root,
+.MuiAccordion-root *,
+div[class*="MuiAccordion-root"],
+div[class*="MuiAccordion-root"] * {
+  cursor: pointer !important;
+  pointer-events: pointer !important;
+}
+
+/* Target the expand icon and its container specifically */
+.MuiAccordionSummary-expandIconWrapper,
+.MuiAccordionSummary-expandIconWrapper *,
+button.MuiAccordionSummary-root,
+button.MuiAccordionSummary-root * {
+  cursor: pointer !important;
+}
+
+/* Override any interactive states */
+.MuiAccordion-root:hover,
+.MuiAccordion-root:active,
+.MuiAccordion-root:focus,
+.MuiAccordionSummary-root:hover,
+.MuiAccordionSummary-root:active,
+.MuiAccordionSummary-root:focus {
+  cursor: none !important;
+}
+
+/* Target the List components with high specificity */
+.MuiList-root,
+.MuiListItem-root,
+.MuiListItemIcon-root,
+.MuiListItemText-root,
+div[class*="MuiList-root"],
+div[class*="MuiListItem-root"],
+div[class*="MuiListItemIcon-root"],
+div[class*="MuiListItemText-root"] {
+  cursor: none !important;
+}
+
+/* Ensure buttons and clickable elements maintain functionality without pointer cursor */
+button,
+[role="button"],
+a,
+.MuiButtonBase-root {
+  cursor: none !important;
+  pointer-events: auto !important;
+}
+
+/* Target any element with 'button' in its class name */
+[class*="button"],
+[class*="Button"] {
+  cursor: none !important;
 }
